<resources>
    <string name="app_name">Intrust Communications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_home">Home</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_services">Services</string>
    <string name="menu_clients">Clients</string>
    <string name="menu_careers">Careers</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_map">Where we are</string>
    <string name="footer_string">Copyright \u00a9 Bryan Beffa</string>

    <string name="works_list">
        <li>Lead Generation</li>\n
        <li>Telemarketing</li>\n
        <li>Remote Office</li>\n
        <li>Customer Service</li>
    </string>

    <string name="client_benefits_list_webchat_page">
        <li>Significant reduction in costs as amount of telephone support calls is low</li>\n\n
        <li>Ability to handle more than one customer whilst at all times respecting Data Protection and Compliance</li>\n\n
        <li>We can provide 24 hour Live Web Chat support services</li>\n\n
        <li>Provide real-time contact solutions that will increase conversions and improve customer satisfaction levels</li>
    </string>

    <string name="intrust_operate_as_follow_inbound_page">
        <li>Providing high quality, Customer interaction for Customer Service and Sales calls</li>\n\n
        <li>Working with our clients to have fully synced calendars where appropriate</li>\n\n
        <li>Increase your sales and Customer Interaction today and contact <b>Intrust Communications</b></li>
    </string>

    <string name="intrust_operate_as_follow_customer_retention">
        <li>We will work with you to suggest ways/incentivies to either win your customers back or maintain them within the business</li>\n\n
        <li>We will work with you to provide comprehensive feedback on why your customer felt the need to leave in the first place</li>\n\n
        <li>We will work with you to provide a plan to ensure your customers are always kept happy and maintained with your business</li>\n\n
        <li>Subject to client agreement we can make a follow up call after winback/ recontract to measure the success and provide comprehensive feedback to you</li>
    </string>

    <string name="client_benefits_list_inbound_page">
        <li>Flexibility to create a bespoke service for your business requirements</li>\n\n
        <li>Responsive, professional and cost-effective solutions</li>\n\n
        <li>High-quality customer interactions and a high return on Investment</li>\n\n
        <li>Experience across a wide range of sectors, media and languages</li>\n\n
        <li>Continuous real-time monitoring and reporting of your KPIs that generate the highest level of qualified leads</li>\n\n
        <li>High response rates with successful up-selling and cross-selling programs</li>\n\n
        <li>Experts in this Industry and will work with you as our client to improve the overall Customer Journey</li>
    </string>

    <string name="intrust_operate_as_follow_lead_page">
        <li>Providing high quality, fully confirmed leads to our clients.</li>\n\n
        <li>Working with our clients and have fully synced calendars where appropriate.</li>\n\n
        <li>A text or phone call will be made 24 hours before the appointment (working day) to confirm everything is still in order.</li>\n\n
        <li>Subject to client agreement we can make a follow up call after the appointment to measure the success and provide comprehensive feedback to our client.</li>
    </string>

    <string name="first_job_description_list">
        <li>Applicants must have an excellent Telephone manner.</li>\n\n
        <li>Applicants must also have excellent written English and grammar as there will also be a requirement to communicate via Social Media.</li>\n\n
        <li>Empowering our staff.</li>\n\n
        <li>Excellent Reporting features.</li>\n\n
        <li>Excellent System and CRM.</li>
    </string>

    <string name="second_job_description_list">
        <li>Contact both Consumer and Business contacts to ensure the highest quality of Customer Service and excellence.</li>\n\n
        <li>Applicants must have the ability to negotiate in a positive manner and ensure that there is a positive outcome for the end customer.</li>\n\n
        <li>Applicants must have an excellent Telephone manner.</li>\n\n
        <li>Applicants must also have excellent written English and grammar as there will also be a requirement to communicate via Social Media.</li>
    </string>

    <string name="third_job_description_list">
        <li>Contact both Consumer and Business contacts to generate high quality sales and Leads, through our automated dialler.</li>\n\n
        <li>Applicants must have the ability to negotiate in a positive manner and influence the buying process.</li>\n\n
        <li>Applicants must have an excellent Telephone manner.</li>\n\n
        <li>Applicants must also have excellent written English and grammar as there will also be a requirement to communicate via Social Media.</li>
    </string>

    <string name="fourth_job_description_list">
        <li>Contact both Consumer and Business contacts to ensure the highest quality of Customer Service and excellence.</li>\n\n
        <li>Applicants must have the ability to negotiate in a positive manner and ensure that there is a positive outcome for the end customer.</li>\n\n
        <li>Applicants must have the ability to negotiate and where appropriate upsell to the end customer</li>\n\n
        <li>Applicants must have an excellent Telephone manner.</li>\n\n
        <li>Applicants must also have excellent written English and grammar as there will also be a requirement to communicate via Social Media.</li>
    </string>


    <string name="first_job_education_list">
        <li>Degree in Business Economics or similar an advantage.</li>\n\n
        <li>Degree or high qualification in Analytics.</li>\n\n
        <li>2nd Language preferred.</li>\n\n
        <li><b>Note:</b> This is a senior position within Intrust.</li>
    </string>

    <string name="first_job_requirements_list">
        <li>Proven track record in the Service Delivery field: Minimum 24 Months</li>\n\n
        <li>Flexible in their approach and the ability to go the extra mile.</li>\n\n
        <li>Every interaction with our client must be a positive one.</li>\n\n
        <li>Ability to negotiate commercial requirements on behalf of Intrust Communications.</li>
    </string>

    <string name="second_job_requirements_list">
        <li>Proven track record in the Call Centre Industry: Minimum 9 Months</li>\n\n
        <li>Flexible in their approach and the ability to go the extra mile.</li>\n\n
        <li>Every interaction with our client must be a positive one.</li>\n\n
        <li>Ability to record comprehensive notes into our CRM System.</li>
    </string>

    <string name="third_job_requirements_list">
        <li>Proven track record in the Call Centre Industry: Minimum 9 Months.</li>\n\n
        <li>Flexible in their approach and the ability to go the extra mile.</li>\n\n
        <li>Every interaction with our client must be a positive one.</li>\n\n
        <li>Ability to record a 50% talk time in there daily routine.</li>
    </string>

    <string name="fourth_job_requirements_list">
        <li>Proven track record in the Call Centre Industry: Minimum 9 Months.</li>\n\n
        <li>Flexible in their approach and the ability to go the extra mile.</li>\n\n
        <li>Every interaction with our client must be a positive one.</li>\n\n
        <li>Ability to record comprehensive notes into our CRM System.</li>
    </string>

    <string name="first_job_package_list">
        <li>A attractive salary with Commission, Car Expense, laptop and phone awaits this person.</li>
    </string>

    <string name="second_job_package_list">
        <li>A attractive salary awaits any person who is successful in applying for this position.</li>\n\n
        <li>Excellent promotional prospects.</li>
    </string>

    <string name="third_job_package_list">
        <li>A attractive salary with commission structure awaits any person who is successful in applying for this position.</li>\n\n
        <li>Excellent promotional prospects.</li>
    </string>

    <string name="fourth_job_package_list">
        <li>A attractive salary with commission structure awaits any person who is successful in applying for this position.</li>\n\n
        <li>Excellent promotional prospects.</li>
    </string>

    <string name="list_back_office_page">
        <li>Postage of Letters</li>\n\n
        <li>Shipping of packages from merchandise material (Mugs, Pens) through to bigger packages such as crates of wine etc.</li>
    </string>

    <string name="lead_generation_last_para">We will work with you to set and agree a plan of action that will ensure your sales Increase and your sales pipeline is maintained.  An agreed criteria to Generate Leads and appointments for you that will ensure you get a return on your investment.<b> All of this can be done in a cost effective way.</b></string>

    <string name="title_app">Intrust Communications</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
