<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_menu_services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_menu_clients"
            android:title="@string/menu_clients" />

        <item
            android:id="@+id/nav_career"
            android:icon="@drawable/career"
            android:title="@string/menu_careers" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_contact_us"
                android:title="@string/menu_contact_us" />
        </menu>
    </item>

</menu>
